<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"

>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_screen_holder"
        android:gravity="center"
        android:id="@+id/root"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <ImageView
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="70px"
            android:tint="@color/white"
            android:src="@drawable/chat" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="20px"
            android:textColorHint="@color/white"
            android:layout_marginRight="20px"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10px"
                android:hint="@string/hint_email"
                android:textSize="30px"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="20px"
            android:layout_marginRight="20px"
android:layout_marginTop="20px"
            android:textColorHint="@color/white"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10px"
                android:hint="@string/hint_password"
                android:textSize="30px"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:layout_marginTop="30px"
            android:background="@drawable/background_btn"
            android:text="@string/btn_login"
            fontPath="fonts/AvenirNextBold.otf"
android:layout_marginLeft="20px"
            android:layout_marginRight="20px"
            android:backgroundTint="@color/white"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25px"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            fontPath="fonts/AvenirNextBold.otf"
            android:textColor="@color/white" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            fontPath="fonts/AvenirNextBold.otf"
            android:textColor="@color/white"
            android:textSize="25px" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="100px"
        android:layout_height="100px"
        android:layout_gravity="center"

        android:visibility="gone" />
</android.support.design.widget.CoordinatorLayout>