<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/login_screen_holder"
    android:fitsSystemWindows="true"
 >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_screen_holder"
        android:gravity="center"
        android:id="@+id/root"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">



    <ImageView
            android:layout_width="160px"
            android:layout_height="160px"
            android:layout_gravity="center_horizontal"
            android:tint="@color/white"
            android:src="@drawable/chat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            fontPath="fonts/AvenirNextBold.otf"
            android:text="@string/lbl_forgot_password"
            android:textColor="@android:color/white"
            android:textSize="30px" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
           android:textColorHint="@color/white"
            android:layout_marginRight="20px"
            android:layout_marginLeft="20px"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20px"
                android:layout_marginTop="30px"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
           android:backgroundTint="@color/white"
           android:layout_marginRight="20px"

            fontPath="fonts/AvenirNextBold.otf"
            android:layout_marginLeft="20px"
            android:background="@drawable/background_btn"
            android:text="@string/btn_reset_password"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />



    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="100px"
        android:layout_height="100px"
        android:layout_gravity="center"

        android:visibility="gone" />
    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:text="Login "
        android:id="@+id/login"
        fontPath="fonts/AvenirNextBold.otf"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:textSize="50px"
        android:padding="10px"
        android:layout_marginTop="100px"
        android:layout_marginRight="100px"
        />

</android.support.design.widget.CoordinatorLayout>